[package]
authors = ["Jacob Bramley <git@j.clz27.uk>"]
categories = ["embedded", "no-std", "hardware-support"]
description = "I²C driver for IST's HYT221, HYT271 and HYT939 humidity sensor modules."
name = "ist-hyt"
keywords = ["ist", "hyt", "humidity", "temperature", "embedded-hal-driver"]
version = "0.1.0"
edition = "2018"
license = "MIT"
readme = "README.md"

[dependencies]
embedded-hal = "0.2.4"

[dependencies.fixed]
optional = true
version = "1.1.0"

[dev-dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.12"
embedded-hal = "0.2.4"
cfg-if = "0.1.10"

[dev-dependencies.rtt-target]
version  = "0.2.2"
features = ["cortex-m"]

[dev-dependencies.panic-rtt-target]
version  = "0.1.1"
features = ["cortex-m"]

[dev-dependencies.lpc8xx-hal]
version = "0.8.2"
features = ["824m201jdh20"]

[profile.dev]
debug = true
panic = "abort"

[profile.release]
debug = true
panic = "abort"
lto = true
opt-level = "z"

[features]
i8f24 = ["fixed"]
